trying so hard flex

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
         <li><a href="#">Services</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
+      <div class="menu-toggle">
+        <input type="checkbox" />
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
     </header>
     <!--end navbar-->
     <section id="jumbotron">
@@ -90,7 +96,7 @@
         <br />
         numquam quos iusto sit esse.
       </p>
-      <div class="container mb-5">
+      <div class="container mb-5" style="text-decoration: none">
         <a href="https://www.instagram.com/yxgn.team" target="_blank">
           <i class="bi bi-instagram text-light fs-3 p-3"></i>
         </a>
@@ -107,7 +113,7 @@
           <i class="bi bi-whatsapp text-light fs-3 p-3"></i>
         </a>
       </div>
-      <div class="fw-bold">
+      <div class="fw-bold" style="text-decoration: none">
         <p>developed by <a href="https://www.instagram.com/yxgn.team" target="_blank">YXGN.dev</a></p>
       </div>
     </footer>
@@ -116,5 +122,6 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <script src="script.js"></script>
   </body>
 </html>
