--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#">Profile</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#">Services</a></li>
+        <li><a href="#services">Services</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
       <div class="menu-toggle">
@@ -88,6 +88,26 @@
         </div>
       </div>
     </section>
+    <section id="services">
+      <h1 class="text-center text-dark" style="padding: 2em">What We Do?</h1>
+      <div class="blog-post">
+        <div class="blog-post__img">
+          <img src="assets/1.jpg" alt="Video Production" />
+        </div>
+        <div class="blog-post__info">
+          <div class="blog-post__date">
+            <span>sunday</span>
+            <span>November 02 2003</span>
+          </div>
+          <h1 class="blog-post__title">Video Production</h1>
+          <p class="blog-post__text">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores nesciunt sunt possimus iure sapiente
+            similique, reiciendis reprehenderit nihil officia neque.
+          </p>
+          <a href="#" class="blog-post__cta">More</a>
+        </div>
+      </div>
+    </section>
     <!--akhir-->
     <footer class="text-light text-center p-3 mt-5" id="contact">
       <p class="mt-5">
@@ -109,9 +129,7 @@
         >
           <i class="bi bi-tiktok text-light fs-3 p-3"></i>
         </a>
-        <a href="https://wa.me/6285819573758" target="_blank">
-          <i class="bi bi-whatsapp text-light fs-3 p-3"></i>
-        </a>
+        <a href="https://wa.me/6285819573758" target="_blank"><i class="bi bi-whatsapp text-light fs-3 p-3"></i></a>
       </div>
       <div class="fw-bold" style="text-decoration: none">
         <p>developed by <a href="https://www.instagram.com/yxgn.team" target="_blank">YXGN.dev</a></p>
