--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <img src="assets/12.png" alt="logo" class="logo" />
       <ul>
         <li><a href="#home">Home</a></li>
-        <li><a href="#">Profile</a></li>
+        <li><a href="#profile">Profile</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="#contact">Contact</a></li>
@@ -33,53 +33,98 @@
       </div>
     </header>
     <!--end navbar-->
-    <section id="jumbotron">
-      <div class="banner-card">
-        <img src="assets/1.jpg" alt="HOME" />
-        <div class="banner-text text-center">
-          <h2 class="fw-bold">YXGN Creative</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. <br />
-            Illo facere vero tempore fugiat nam soluta.
-          </p>
+    <section class="carousel">
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="assets/1.jpg" class="d-block w-100" alt="..." />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>First slide label</h5>
+              <p>Some representative placeholder content for the first slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="assets/2.jpg" class="d-block w-100" alt="..." />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Some representative placeholder content for the second slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="assets/3.jpg" class="d-block w-100" alt="..." />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>Some representative placeholder content for the third slide.</p>
+            </div>
+          </div>
         </div>
       </div>
+      <section id="profile" class="profile">
+        <div class="text-center">
+          <h1>Yxgn Creative</h1>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus asperiores voluptate <br />
+            dignissimos neque blanditiis perspiciatis illo qui voluptatum dolore autem.
+          </p>
+        </div>
+      </section>
     </section>
-    <!--end navbar-->
+    <!--end jumbotron-->
     <script type="text/javascript">
       window.addEventListener("scroll", function () {
         var header = document.querySelector("header");
         header.classList.toggle("sticky", window.scrollY > 0);
       });
     </script>
-
     <!--mulai disini-->
     <section id="portfolio">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-3 mb-3">
-            <div class="card">
+            <div class="card1">
               <a href="#" target="_blank">
                 <img src="assets/Logo SMA 2.png" class="card-img-top" alt="SMAN 2" />
               </a>
             </div>
           </div>
           <div class="col-md-3 mb-3">
-            <div class="card">
+            <div class="card2">
               <a href="https://youtu.be/_aYx3ZXfn60" target="_blank">
                 <img src="assets/Stinco.png" class="card-img-top" alt="Stinco" />
               </a>
             </div>
           </div>
           <div class="col-md-3 mb-3">
-            <div class="card">
+            <div class="card3">
               <a href="#">
                 <img src="assets/Logo SMA 2.png " target="_blank" class="card-img-top" alt="..." />
               </a>
             </div>
           </div>
           <div class="col-md-3 mb-3">
-            <div class="card">
+            <div class="card4">
               <a href="#">
                 <img src="assets/Logo SMA 2.png" target="_blank" class="card-img-top" alt="..." />
               </a>
@@ -95,11 +140,7 @@
           <img src="assets/1.jpg" alt="Video Production" />
         </div>
         <div class="blog-post__info">
-          <div class="blog-post__date">
-            <span>sunday</span>
-            <span>November 02 2003</span>
-          </div>
-          <h1 class="blog-post__title">Video Production</h1>
+          <h1 class="blog-post__title fw-bold">Video Production</h1>
           <p class="blog-post__text">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores nesciunt sunt possimus iure sapiente
             similique, reiciendis reprehenderit nihil officia neque.
